[package]
name = "advancedresearch-nano_ecs"
version = "0.1.0"
authors = ["Sven Nilsen <bvssvni@gmail.com>"]
edition = "2018"
keywords = ["ecs", "macro", "tiny", "nano", "advancedresearch"]
description = "A bare-bones macro-based Entity-Component-System"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/nano_ecs.git"
homepage = "https://github.com/advancedresearch/nano_ecs"

[lib]
name = "nano_ecs"

[dependencies]
